<resources>
    <string name="app_name" translatable="false">Memory Plus</string>

    <!-- General Words -->
    <string name="total">Total</string>
    <string name="cards">cards</string>

    <!-- General Messages -->
    <string name="error_unexpected">Unexpected error: %1$s</string>

    <!-- Default Card Set Names -->
    <string-array name="default_card_set_names">
        <item>Photos (easy)</item>
        <item>Circles (hard)</item>
    </string-array>

    <!-- Default Profile Name -->
    <string name="default_profile_name">Me</string>

    <!-- General Buttons -->
    <string name="button_back">Back</string>
    <string name="button_okay">Okay</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_again">Again</string>
    <string name="button_start">Start</string>
    <string name="button_clear">Clear</string>

    <!-- Content Descriptions -->
    <string name="desc_image_title">Title Image</string>
    <string name="desc_image_profile">Profile Image</string>
    <string name="desc_image_profile_with_name">Profile image of %1$s</string>
    <string name="desc_image_profile_new">New Profile</string>
    <string name="desc_image_card_set_with_name">Card Set Image of %1$s</string>
    <string name="desc_image_card_set_new">New Card Set</string>
    <string name="desc_icon_remove_profile_image">Remove profile image</string>
    <string name="desc_image_card">Card Number %1$d</string>
    <string name="desc_image_card_new">New Card</string>
    <string name="desc_image_medal_gold">Gold Medal</string>
    <string name="desc_image_medal_silver">Silver Medal</string>
    <string name="desc_image_medal_bronze">Bronze Medal</string>

    <!-- Main Menu Activity -->
    <string name="main_menu_title" translatable="false">mEMORY</string>
    <string name="main_menu_sub_title">Play it with your own cards!</string>
    <string name="main_menu_copyright_and_version" translatable="false">\u00a9 2022 Dirk Michael / Version %1$s (Build %2$d)</string>
    <string name="main_menu_button_profiles">Profiles</string>
    <string name="main_menu_button_card_sets">Card Sets</string>
    <string name="main_menu_button_new_game">New Game</string>
    <string name="main_menu_button_leaderboard">Leaderboard</string>

    <!-- Image Crop Activity -->
    <string name="image_crop_title">cROP iMAGE</string>
    <string name="image_crop_message">Select the area of the picture that you want to use for your profile picture.</string>

    <!-- Profiles Activity -->
    <string name="profiles_title">pROFILES</string>
    <string name="profiles_message_add">Create a profile for you and for all the players you want to play with by tapping on the \"Plus\" icon.</string>
    <string name="profiles_message_remove">To remove a profile, tap on the profile image or name for a few seconds.</string>
    <string name="profiles_new_profile">New Profile</string>
    <string name="profiles_dialog_remove_title">Remove Profile?</string>
    <string name="profiles_dialog_remove_message">How do you want to remove your profile?</string>
    <string name="profiles_dialog_remove_option_yes_both">Remove my profile completely.</string>
    <string name="profiles_dialog_remove_option_yes_local">Remove only my local profile.</string>
    <string name="profiles_dialog_remove_option_no">No, not at all.</string>

    <!-- Profile Activity -->
    <string name="profile_title_create">cREATE pROFILE</string>
    <string name="profile_title_edit">eDIT pPROFILE</string>
    <string name="profile_message_create">Please provide a name for the new profile. You can also select a profile image, but this is optional.</string>
    <string name="profile_message_edit">Here you can change your name and your profile picture.</string>
    <string name="profile_error_empty_name">The profile name must not be empty.</string>
    <string name="profile_error_name_not_unique">The chosen name is already used by another profile.</string>
    <string name="profile_hint_identifier">With your profile id %1$s you can import your profile into other devices.</string>

    <!-- Card Sets Activity -->
    <string name="card_sets_title">cARD sETS</string>
    <string name="card_sets_message_add">Create or edit your card sets by clicking on the \"Plus\" icon or an existing card set.</string>
    <string name="card_sets_message_remove">To remove a card set, tap on the card set image or name for a few seconds.</string>
    <string name="card_sets_new_card_set">New Card Set</string>
    <string name="card_sets_card_count">( %1$d cards )</string>
    <string name="card_sets_dialog_remove_title">Remove Card Set?</string>
    <string name="card_sets_dialog_remove_message">Do you really want to remove this card set?</string>
    <string name="card_sets_dialog_remove_option_yes">Do it</string>
    <string name="card_sets_dialog_remove_option_no">No, I\'ve changed my mind</string>

    <!-- Card Set Activity -->
    <string name="card_set_title">cARD sET</string>
    <string name="card_set_message_name">Here you can change the name of your card set.</string>
    <string name="card_set_message_add">Add new cards to your card set by tapping on the \"Plus\" icon. You can also change the name of your card set.</string>
    <string name="card_set_message_remove">To remove a card, tap on the card image for a few seconds.</string>
    <string name="card_set_error_name_empty">The name of the card set must not be empty.</string>
    <string name="card_set_error_name_not_unique">The chosen name is already used by another card set.</string>
    <string name="card_set_error_too_few_cards">Your card set needs at least two cards to be playable.</string>
    <string name="card_set_image_already_exists">The image already exists and is not added twice.</string>

    <!-- New Game Activity -->
    <string name="new_game_title">nEW gAME</string>
    <string name="new_game_which_card_set">Please select the card set you want to play with.</string>
    <string name="new_game_which_profiles">Please select all player profiles that wish to play.</string>
    <string name="new_game_card_set_card_count">( %1$d cards )</string>

    <!-- Game Activity -->
    <string name="game_dialog_cancel_single_title">Cancel Game?</string>
    <string name="game_dialog_cancel_single_message">Do you really want to cancel the game?</string>
    <string name="game_dialog_cancel_single_option_yes">Yes, i have to go</string>
    <string name="game_dialog_cancel_single_option_no">No, not at all</string>
    <string name="game_dialog_cancel_multi_title">Leave or Cancel Game?</string>
    <string name="game_dialog_cancel_multi_message">You can leave the game and the other players can go on or you can cancel the game. What do you want to do?</string>
    <string name="game_dialog_cancel_multi_option_leave">I want to leave the game</string>
    <string name="game_dialog_cancel_multi_option_cancel">Lets end this game</string>
    <string name="game_dialog_cancel_multi_option_no">Neither, i made a mistake</string>
    <string name="game_turns">Turn: %1$d</string>
    <string name="game_hits">Hits: %1$d</string>

    <!-- Game Result Activity -->
    <string name="game_result_title">rESULTS</string>
    <string name="game_result_message">The game has ended. Here you can see the ranking of all players. Congratulations to the winner.</string>
    <string name="game_result_store_results">Store the results in the leaderboard</string>
    <string name="game_result_label_points">Points</string>
    <string name="game_result_label_hit_rate">Hit rate</string>
    <string name="game_result_label_hit_rate_value">%1$d%%</string>

    <!-- Leaderboard Activity -->
    <string name="leaderboard_title">lEADER bOARD</string>
    <string name="leaderboard_category_message">Select a category to show the results.</string>
    <string name="leaderboard_average_hit_count">Hits/Game</string>
    <string name="leaderboard_hit_count">Hit Points</string>
    <string name="leaderboard_hit_rate">Hit Rate</string>
    <string name="leaderboard_hit_rate_value">%1$s%%</string>
    <string name="leaderboard_total_games">Total Games</string>
    <string name="leaderboard_won_games">Won Games</string>
    <string name="leaderboard_dialog_clear_title">Clear Leaderboard?</string>
    <string name="leaderboard_dialog_clear_message">Do you really want to clear the leaderboard?</string>
    <string name="leaderboard_dialog_clear_option_yes">Yes, throw it away</string>
    <string name="leaderboard_dialog_clear_option_no">No, not at all</string>
    <string name="leaderboard_empty">Nothing to see here yet.</string>
</resources>