<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ActivityStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profiles.ProfileActivity">

    <!-- Title -->
    <TextView
        android:id="@+id/profile_title"
        style="@style/TitleStyle.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gap_normal"
        android:text="@string/profile_title_create"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Message -->
    <TextView
        android:id="@+id/profile_message"
        style="@style/TextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gap_normal"
        android:labelFor="@id/profile_name"
        android:text="@string/profile_message_create"
        app:layout_constraintTop_toBottomOf="@id/profile_title" />

    <!-- Profile Image Panel -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_image_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gap_big"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_message">

        <!-- Guide Left -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/profile_port_guide_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.33" />

        <!-- Profile Image -->
        <ImageButton
            android:id="@+id/profile_image"
            android:layout_width="@dimen/image_size_profile"
            android:layout_height="@dimen/image_size_profile"
            android:background="@android:color/transparent"
            android:contentDescription="@string/desc_image_profile"
            android:scaleType="fitXY"
            android:src="@drawable/image_profile_empty"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Remove Image Button -->
        <ImageButton
            android:id="@+id/profile_button_image_remove"
            style="@style/IconStyle"
            android:layout_width="@dimen/image_size_icon"
            android:layout_height="@dimen/image_size_icon"
            android:layout_marginEnd="@dimen/gap_normal"
            android:contentDescription="@string/desc_icon_remove_profile_image"
            android:src="@drawable/selector_icon_trashcan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/profile_port_guide_left"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Profile Name -->
    <EditText
        android:id="@+id/profile_name"
        style="@style/EditStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gap_normal"
        android:autofillHints="name"
        android:inputType="text"
        android:lines="1"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/profile_image_panel" />

    <!-- Error Message -->
    <TextView
        android:id="@+id/profile_error_message"
        style="@style/TextStyle.Error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gap_normal"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/profile_name" />

    <!-- Okay Button -->
    <Button
        android:id="@+id/profile_button_okay"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_okay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <!-- Cancel Button -->
    <Button
        android:id="@+id/profile_button_cancel"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>